# status

./: .gitignore  AGENTS.md  README.md  meson.build
.github/workflows/: test.yml
config/: status_version.h.in
doc/graph/: status_encode_breakdown.dot
examples/: status_ids.h
include/: status.h
src/: status.c  status.h  status_version.h.in
tests/: meson.build  status_ids.h  test_status.c
